{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 32,
  "lineage": "6eabe8ba-4b96-276b-9ead-a5a3798d45fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-046b36f55e189564a",
            "arn": "arn:aws:ec2:us-east-1:619408136795:instance/i-091dc84a09f245fe3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "qa-dashboard-bastion-profile",
            "id": "i-091dc84a09f245fe3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04ffc5b41bf619061"
              }
            ],
            "primary_network_interface_id": "eni-04ffc5b41bf619061",
            "private_dns": "ip-10-0-3-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.101",
            "public_ip": "13.223.78.116",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0083945038a73247b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b809f34f5e05868",
            "tags": {
              "Name": "qa-dashboard-bastion"
            },
            "tags_all": {
              "Name": "qa-dashboard-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc422f41212e90fa"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619408136795",
            "id": "i-091dc84a09f245fe3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.bastion",
            "aws_iam_role.bastion",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.bastion",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619408136795:internet-gateway/igw-0bcf74c060d0d91a7",
            "id": "igw-0bcf74c060d0d91a7",
            "owner_id": "619408136795",
            "region": "us-east-1",
            "tags": {
              "Name": "qa-dashboard-igw"
            },
            "tags_all": {
              "Name": "qa-dashboard-igw"
            },
            "vpc_id": "vpc-09d8dd02974e8d81d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619408136795",
            "id": "igw-0bcf74c060d0d91a7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619408136795:route-table/rtb-053ed85ae3f0fa769",
            "id": "rtb-053ed85ae3f0fa769",
            "owner_id": "619408136795",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bcf74c060d0d91a7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "qa-dashboard-public-rt"
            },
            "tags_all": {
              "Name": "qa-dashboard-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d8dd02974e8d81d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619408136795",
            "id": "rtb-053ed85ae3f0fa769",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094d1f596518a9240",
            "region": "us-east-1",
            "route_table_id": "rtb-053ed85ae3f0fa769",
            "subnet_id": "subnet-05b809f34f5e05868"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619408136795",
            "id": "rtbassoc-094d1f596518a9240",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619408136795:security-group/sg-0bc422f41212e90fa",
            "description": "Allow SSH access to bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc422f41212e90fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "205.185.107.33/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "qa-dashboard-bastion-sg",
            "name_prefix": "",
            "owner_id": "619408136795",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09d8dd02974e8d81d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619408136795",
            "id": "sg-0bc422f41212e90fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619408136795:security-group/sg-0bde86b2f117a6427",
            "description": "Allow Postgres access from app/bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bde86b2f117a6427",
            "ingress": [
              {
                "cidr_blocks": [
                  "205.185.107.33/32"
                ],
                "description": "Direct access from development machine",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bc422f41212e90fa"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "qa-dashboard-rds-sg",
            "name_prefix": "",
            "owner_id": "619408136795",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09d8dd02974e8d81d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619408136795",
            "id": "sg-0bde86b2f117a6427",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619408136795:subnet/subnet-0eca2e8f6a2ec7e5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eca2e8f6a2ec7e5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619408136795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "qa-dashboard-private-a"
            },
            "tags_all": {
              "Name": "qa-dashboard-private-a"
            },
            "vpc_id": "vpc-09d8dd02974e8d81d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619408136795",
            "id": "subnet-0eca2e8f6a2ec7e5d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619408136795:subnet/subnet-06c818f9b8b3de185",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c818f9b8b3de185",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619408136795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "qa-dashboard-private-b"
            },
            "tags_all": {
              "Name": "qa-dashboard-private-b"
            },
            "vpc_id": "vpc-09d8dd02974e8d81d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619408136795",
            "id": "subnet-06c818f9b8b3de185",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619408136795:subnet/subnet-05b809f34f5e05868",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b809f34f5e05868",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619408136795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "qa-dashboard-public"
            },
            "tags_all": {
              "Name": "qa-dashboard-public"
            },
            "vpc_id": "vpc-09d8dd02974e8d81d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619408136795",
            "id": "subnet-05b809f34f5e05868",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619408136795:vpc/vpc-09d8dd02974e8d81d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d9e1e4dfb8c3df4",
            "default_route_table_id": "rtb-0c3307c25d578cb36",
            "default_security_group_id": "sg-0c985cd6a7786e04e",
            "dhcp_options_id": "dopt-0da2dee70d2826c8e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d8dd02974e8d81d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3307c25d578cb36",
            "owner_id": "619408136795",
            "region": "us-east-1",
            "tags": {
              "Name": "qa-dashboard-vpc"
            },
            "tags_all": {
              "Name": "qa-dashboard-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619408136795",
            "id": "vpc-09d8dd02974e8d81d",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}